--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "license": "SEE LICENSE IN <your-license-filename>",
     "repository": "<fill-your-repository-here>",
     "scripts": {
-        "lint": "tslint \"src/**/*.ts\""
+        "lint": "tslint \"src/**/*.ts\"",
+        "deploy": "tns prepare android && tns deploy android"
     },
     "dependencies": {
         "@angular/animations": "~7.1.0",
@@ -24,23 +25,39 @@
         "@angular/platform-browser": "~7.1.0",
         "@angular/platform-browser-dynamic": "~7.1.0",
         "@angular/router": "~7.1.0",
-        "nativescript-angular": "~7.1.0",
+        "guid-typescript": "^1.0.9",
+        "nativescript-accelerometer": "2.0.1",
+        "nativescript-angular": "^7.1.1",
+        "nativescript-background-http": "3.3.1",
+        "nativescript-camera": "4.1.1",
+        "nativescript-fresco": "5.1.0",
+        "nativescript-geolocation": "4.3.1",
+        "nativescript-imagepicker": "6.0.5",
+        "nativescript-intl": "3.0.0",
+        "nativescript-iqkeyboardmanager": "1.3.0",
+        "nativescript-social-share": "1.5.1",
         "nativescript-theme-core": "~1.0.4",
-        "nativescript-ui-sidedrawer": "~5.1.0",
-        "tns-core-modules": "~5.1.0",
+        "nativescript-ui-autocomplete": "3.10.3",
+        "nativescript-ui-calendar": "3.10.0",
+        "nativescript-ui-dataform": "3.9.1",
+        "nativescript-ui-gauge": "3.7.1",
+        "nativescript-ui-listview": "5.0.1",
+        "nativescript-ui-sidedrawer": "5.0.1",
         "reflect-metadata": "~0.1.10",
         "rxjs": "~6.3.0",
+        "tns-core-modules": "~5.1.0",
         "zone.js": "~0.8.18"
     },
     "devDependencies": {
+        "@angular/compiler-cli": "~7.1.0",
         "@nativescript/schematics": "~0.5.0",
+        "@ngtools/webpack": "~7.1.0",
         "codelyzer": "~4.5.0",
         "nativescript-dev-sass": "~1.6.0",
         "nativescript-dev-typescript": "~0.7.0",
         "nativescript-dev-webpack": "~0.19.0",
-        "tslint": "~5.11.0",
-        "@angular/compiler-cli": "~7.1.0",
-        "@ngtools/webpack": "~7.1.0"
+        "ng-swagger-gen": "^1.4.3",
+        "tslint": "~5.11.0"
     },
     "readme": "NativeScript Application"
 }
