--- a/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/App_Resources/Android/src/main/AndroidManifest.xml
@@ -5,10 +5,10 @@
 	android:versionName="1.0">
 
 	<supports-screens
-		android:smallScreens="true"
+		android:smallScreens="false"
 		android:normalScreens="true"
 		android:largeScreens="true"
-		android:xlargeScreens="true"/>
+		android:xlargeScreens="false"/>
 
 	<uses-sdk
 		android:minSdkVersion="17"
@@ -22,7 +22,7 @@
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
-		android:label="@string/app_name"
+		android:label="Couple-Tivity"
 		android:theme="@style/AppTheme">
 
 		<activity
