--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,17 @@
         "target": "es5",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "noEmitHelpers": true,
-        "noEmitOnError": true,
+        "moduleResolution": "node",
+        "typeRoots": [
+            "node_modules/@types"
+        ],
         "lib": [
             "es6",
             "dom",
-            "es2015.iterable"
+            "es2015.iterable",
+            "es2017"
         ],
-        "baseUrl": ".",
+        "baseUrl": "./",
         "paths": {
             "~/*": [
                 "src/*"
@@ -21,9 +24,5 @@
                 "./node_modules/*"
             ]
         }
-    },
-    "exclude": [
-        "node_modules",
-        "platforms"
-    ]
+    }
 }
