--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-    "nativescript": {
-        "id": "org.nativescript.coupletivity",
-        "tns-android": {
-            "version": "5.1.0"
-        },
-        "tns-ios": {
-            "version": "5.1.0"
-        }
+  "nativescript": {
+    "id": "org.nativescript.coupletivity",
+    "tns-android": {
+      "version": "5.1.0"
     },
-    "description": "NativeScript Application",
-    "license": "SEE LICENSE IN <your-license-filename>",
-    "repository": "<fill-your-repository-here>",
-    "scripts": {
-        "lint": "tslint \"src/**/*.ts\"",
-        "start": "tns preview",
-        "build": "tns prepare android && tns build android",
-        "deploy": "tns prepare android && tns deploy android"
-    },
-    "dependencies": {
-        "@angular/animations": "~7.1.0",
-        "@angular/common": "~7.1.0",
-        "@angular/compiler": "~7.1.0",
-        "@angular/core": "~7.1.0",
-        "@angular/forms": "~7.1.0",
-        "@angular/http": "~7.1.0",
-        "@angular/platform-browser": "~7.1.0",
-        "@angular/platform-browser-dynamic": "~7.1.0",
-        "@angular/router": "~7.1.0",
-        "nativescript-accelerometer": "^2.0.1",
-        "nativescript-angular": "^7.1.1",
-        "nativescript-fresco": "^5.1.0",
-        "nativescript-geolocation": "^4.3.1",
-        "nativescript-intl": "^3.0.0",
-        "nativescript-theme-core": "^1.0.4",
-        "nativescript-ui-autocomplete": "^3.10.3",
-        "nativescript-ui-dataform": "^3.9.1",
-        "nativescript-ui-listview": "^5.0.1",
-        "nativescript-ui-sidedrawer": "^5.0.1",
-        "reflect-metadata": "~0.1.10",
-        "rxjs": "~6.3.0",
-        "tns-core-modules": "~5.1.0",
-        "zone.js": "~0.8.18"
-    },
-    "devDependencies": {
-        "@angular/compiler-cli": "~7.1.0",
-        "@nativescript/schematics": "~0.5.0",
-        "@ngtools/webpack": "~7.1.0",
-        "codelyzer": "~4.5.0",
-        "nativescript-dev-sass": "~1.6.0",
-        "nativescript-dev-typescript": "~0.7.9",
-        "nativescript-dev-webpack": "~0.19.0",
-        "ng-swagger-gen": "^1.4.3",
-        "tslint": "~5.12.1"
-    },
-    "readme": "NativeScript Application"
+    "tns-ios": {
+      "version": "5.1.0"
+    }
+  },
+  "description": "Get more active with your loved one with Couple-Tivity",
+  "license": "SEE LICENSE IN <your-license-filename>",
+  "repository": "<fill-your-repository-here>",
+  "scripts": {
+    "lint": "tslint \"src/**/*.ts\"",
+    "start": "tns preview",
+    "build": "tns prepare android && tns build android",
+    "deploy": "tns prepare android && tns deploy android"
+  },
+  "dependencies": {
+    "@angular/animations": "~7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
+    "@angular/forms": "~7.1.0",
+    "@angular/http": "~7.1.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/router": "~7.1.0",
+    "nativescript-accelerometer": "^2.0.1",
+    "nativescript-angular": "^7.1.1",
+    "nativescript-fresco": "^5.1.0",
+    "nativescript-geolocation": "^4.3.1",
+    "nativescript-intl": "^3.0.0",
+    "nativescript-theme-core": "^1.0.4",
+    "nativescript-ui-autocomplete": "^3.10.3",
+    "nativescript-ui-dataform": "^3.9.1",
+    "nativescript-ui-listview": "^5.0.1",
+    "nativescript-ui-sidedrawer": "^5.0.1",
+    "reflect-metadata": "~0.1.10",
+    "rxjs": "~6.3.0",
+    "tns-core-modules": "~5.1.0",
+    "zone.js": "~0.8.18"
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "~7.1.0",
+    "@nativescript/schematics": "~0.5.0",
+    "@ngtools/webpack": "~7.1.0",
+    "codelyzer": "~4.5.0",
+    "nativescript-dev-sass": "~1.6.0",
+    "nativescript-dev-typescript": "~0.7.9",
+    "nativescript-dev-webpack": "~0.19.0",
+    "ng-swagger-gen": "^1.4.3",
+    "tslint": "~5.12.1"
+  },
+  "readme": "NativeScript Application",
+  "author": "Heinrich Venter"
 }
